--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hannah English Course</title>
-    <link rel="stylesheet" href="style.css">
+
     <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
+        // Inicialização do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -22,8 +23,88 @@
         };
         firebase.initializeApp(firebaseConfig);
     </script>
+
     <style>
-        .login-link { cursor: pointer; }
+        /* Garante que body e html ocupem 100% da tela */
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        /* Container principal em flex column para enfileirar título e SVG */
+        .map-container {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100vh; /* ocupa toda a altura da viewport */
+            position: relative;
+            background-color: #fafafa; /* cor de fundo neutra, se desejar */
+        }
+
+        /* Estilo do título e nível/unidade */
+        .title-container {
+            flex: 0 0 auto;  /* não expande, ocupa apenas o espaço necessário */
+            text-align: center;
+            margin-top: 20px;
+            padding-bottom: 10px; /* um espaçamento abaixo para separar o svg */
+            z-index: 2; /* fica acima do SVG */
+        }
+        .title-container .title-image {
+            max-width: 80%;
+            height: auto;
+        }
+        .level-unit-info {
+            margin-top: 5px;
+            font-size: 24px;
+            font-weight: bold;
+            color: #000;
+        }
+
+        /* O SVG das linhas agora é um flex item que cresce para preencher o espaço restante */
+        .lines-svg {
+            flex: 1 1 auto; /* cresce para ocupar todo o espaço abaixo do title-container */
+            width: 100%;
+            height: 100%;
+            /* Removemos qualquer position:absolute anterior */
+        }
+
+        /* Botão “Back” no canto superior esquerdo */
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-family: Arial, sans-serif;
+            z-index: 3; /* fica acima de tudo */
+        }
+
+        /* Caixa de login no canto superior direito */
+        .login-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+            padding: 8px 12px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            z-index: 3;
+        }
+        .login-link {
+            cursor: pointer;
+            text-decoration: none;
+            color: #333;
+            font-family: Arial, sans-serif;
+        }
         .user-dropdown {
             display: none;
             flex-direction: column;
@@ -43,19 +124,6 @@
         .user-dropdown .dropdown-item:hover {
             background-color: #f0f0f0;
         }
-        .login-container {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-            padding: 8px 12px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            z-index: 9999;
-        }
         .user-icon {
             width: 30px;
             height: 30px;
@@ -67,42 +135,46 @@
             font-size: 14px;
             color: #333;
         }
-        .title-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .level-unit-info {
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-            color: black;
-            margin-top: 5px;
+
+        /* Ajuste para garantir que, em landscape, o SVG fica abaixo dos títulos sem sobrepor */
+        /* (Na maior parte dos casos, o flex container já resolve, mas pode-se adicionar um pequeno padding-top) */
+        @media (orientation: landscape) {
+            .title-container {
+                padding-bottom: 10px;
+            }
+            .lines-svg {
+                /* Opcional: um pequeno espaçamento extra no topo do SVG, se necessário */
+                /* padding-top: 5px; */
+            }
         }
     </style>
 </head>
+
 <body>
+    <!-- Botão “Back” -->
+    <a href="javascript:history.back()" class="back-button">Back</a>
+
     <!-- Caixa de Login -->
     <div id="loginContainer" class="login-container">
         <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-        <!-- Dropdown de Usuário -->
-        <div id="userDropdown" class="user-dropdown"></div>
+        <div id="userDropdown" class="user-dropdown">
+            <!-- Itens do dropdown aparecerão aqui via JavaScript, se houver -->
+        </div>
     </div>
-    <!-- Botão Back -->
-    <a href="javascript:history.back()" class="back-button">Back</a>
 
+    <!-- Container principal: título no topo e SVG para linhas abaixo -->
     <div class="map-container" id="mapContainer">
-        <!-- Imagem de título centralizada sobre o fundo -->
+        <!-- Título e informações de Level/Unit -->
         <div class="title-container">
-            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-            <!-- Nível e Unidade -->
-            <div id="levelUnitInfo" class="level-unit-info"></div>
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image" />
+            <div id="levelUnitInfo" class="level-unit-info">Level0<br />Unit1</div>
         </div>
 
-        <!-- SVG para as linhas -->
-        <svg id="linesSvg" class="lines-svg"></svg>
+        <!-- SVG responsivo para desenhar as linhas e fases -->
+        <svg id="linesSvg" class="lines-svg" xmlns="http://www.w3.org/2000/svg"></svg>
     </div>
 
-    <!-- Script para forçar reload ao mudar orientação -->
+    <!-- Script para forçar reload ao mudar de orientação -->
     <script>
         let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
         window.addEventListener('resize', () => {
@@ -113,6 +185,7 @@
         });
     </script>
 
+    <!-- Aqui você carrega seu script.js que contém a lógica de desenhar as linhas no SVG -->
     <script src="script.js"></script>
 </body>
 </html>
