--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hannah English Course</title>
 
+    <!-- ---------------------------------------------------------------------
+         Aqui mantém-se o link para o seu CSS original (style.css),
+         que já contém o plano de fundo, o estilo das fases, botões, etc.
+    ----------------------------------------------------------------------->
+    <link rel="stylesheet" href="style.css">
+
     <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
-        // Inicialização do Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -25,32 +30,32 @@
     </script>
 
     <style>
-        /* Garante que body e html ocupem 100% da tela */
+        /* ---------------------------------------------------------------------
+           Pequenas correções específicas para posicionar o SVG abaixo do título.
+           Não retiramos nada do style.css original, apenas adicionamos coisas pontuais.
+        -----------------------------------------------------------------------*/
+        
         html, body {
             margin: 0;
             padding: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden;
+            overflow: hidden; /* para evitar scrolls indesejados */
         }
 
-        /* Container principal em flex column para enfileirar título e SVG */
+        /* Garante que o container principal seja relativo, permitindo que o SVG fique em posição absoluta dentro dele */
         .map-container {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            height: 100vh; /* ocupa toda a altura da viewport */
             position: relative;
-            background-color: #fafafa; /* cor de fundo neutra, se desejar */
+            width: 100%;
+            height: 100vh; /* ocupará toda a tela */
         }
 
-        /* Estilo do título e nível/unidade */
+        /* Título e nível/unidade continuam conforme você já tinha (ou próximo disso) */
         .title-container {
-            flex: 0 0 auto;  /* não expande, ocupa apenas o espaço necessário */
             text-align: center;
             margin-top: 20px;
-            padding-bottom: 10px; /* um espaçamento abaixo para separar o svg */
-            z-index: 2; /* fica acima do SVG */
+            padding-bottom: 10px; /* espaçamento para separar do SVG */
+            z-index: 2; /* para ficar acima do SVG */
         }
         .title-container .title-image {
             max-width: 80%;
@@ -63,15 +68,18 @@
             color: #000;
         }
 
-        /* O SVG das linhas agora é um flex item que cresce para preencher o espaço restante */
+        /* O SVG das linhas ficará absoluto dentro de .map-container.
+           Seu top será definido por JavaScript com base na altura real de .title-container.
+           A largura e o bottom (0) fazem com que ele preencha todo o espaço restante abaixo. */
         .lines-svg {
-            flex: 1 1 auto; /* cresce para ocupar todo o espaço abaixo do title-container */
+            position: absolute;
+            left: 0;
             width: 100%;
-            height: 100%;
-            /* Removemos qualquer position:absolute anterior */
+            bottom: 0;
+            /* top será ajustado dinamicamente via JS */
         }
 
-        /* Botão “Back” no canto superior esquerdo */
+        /* Botão “Back” no canto superior esquerdo (fica acima de tudo) */
         .back-button {
             position: absolute;
             top: 20px;
@@ -82,7 +90,7 @@
             text-decoration: none;
             border-radius: 5px;
             font-family: Arial, sans-serif;
-            z-index: 3; /* fica acima de tudo */
+            z-index: 3;
         }
 
         /* Caixa de login no canto superior direito */
@@ -136,17 +144,7 @@
             color: #333;
         }
 
-        /* Ajuste para garantir que, em landscape, o SVG fica abaixo dos títulos sem sobrepor */
-        /* (Na maior parte dos casos, o flex container já resolve, mas pode-se adicionar um pequeno padding-top) */
-        @media (orientation: landscape) {
-            .title-container {
-                padding-bottom: 10px;
-            }
-            .lines-svg {
-                /* Opcional: um pequeno espaçamento extra no topo do SVG, se necessário */
-                /* padding-top: 5px; */
-            }
-        }
+        /* Apenas para garantir que, ao girar a tela, haja um reload (você já tinha esse script) */
     </style>
 </head>
 
@@ -174,7 +172,7 @@
         <svg id="linesSvg" class="lines-svg" xmlns="http://www.w3.org/2000/svg"></svg>
     </div>
 
-    <!-- Script para forçar reload ao mudar de orientação -->
+    <!-- Script para forçar recarregar ao mudar de orientação -->
     <script>
         let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
         window.addEventListener('resize', () => {
@@ -185,7 +183,36 @@
         });
     </script>
 
-    <!-- Aqui você carrega seu script.js que contém a lógica de desenhar as linhas no SVG -->
+    <!-- 
+        Script que ajusta, após o carregamento da página (e sempre que redimensionar),
+        a <svg> para que seu topo (“top”) fique exatamente abaixo da altura real 
+        de .title-container. Assim ela nunca “passa por cima” do título, nem em portrait nem em landscape.
+    -->
+    <script>
+        function ajustarTopoSVG() {
+            const titleContainer = document.querySelector('.title-container');
+            const svgDasLinhas = document.getElementById('linesSvg');
+
+            if (!titleContainer || !svgDasLinhas) return;
+            // Pega a altura real do título (incluindo margens internas definidas em CSS)
+            const alturaTitulo = titleContainer.offsetHeight;
+
+            // Define o topo do SVG para ficar imediatamente abaixo desse título
+            svgDasLinhas.style.top = alturaTitulo + 'px';
+        }
+
+        // Quando a página carregar completamente, ajusta o SVG
+        window.addEventListener('load', () => {
+            ajustarTopoSVG();
+        });
+
+        // Se o usuário girar a tela ou mudar o tamanho da janela, recalcula o topo do SVG
+        window.addEventListener('resize', () => {
+            ajustarTopoSVG();
+        });
+    </script>
+
+    <!-- Script.js original: responsável por desenhar as linhas e fases dentro do <svg> -->
     <script src="script.js"></script>
 </body>
 </html>
