--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
-
-    <!-- ---------------------------------------------------------------------
-         Aqui mantém-se o link para o seu CSS original (style.css),
-         que já contém o plano de fundo, o estilo das fases, botões, etc.
-    ----------------------------------------------------------------------->
     <link rel="stylesheet" href="style.css">
-
     <!-- Firebase Configuration and Initialization -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -28,91 +22,8 @@
         };
         firebase.initializeApp(firebaseConfig);
     </script>
-
     <style>
-        /* ---------------------------------------------------------------------
-           Pequenas correções específicas para posicionar o SVG abaixo do título.
-           Não retiramos nada do style.css original, apenas adicionamos coisas pontuais.
-        -----------------------------------------------------------------------*/
-        
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden; /* para evitar scrolls indesejados */
-        }
-
-        /* Garante que o container principal seja relativo, permitindo que o SVG fique em posição absoluta dentro dele */
-        .map-container {
-            position: relative;
-            width: 100%;
-            height: 100vh; /* ocupará toda a tela */
-        }
-
-        /* Título e nível/unidade continuam conforme você já tinha (ou próximo disso) */
-        .title-container {
-            text-align: center;
-            margin-top: 20px;
-            padding-bottom: 10px; /* espaçamento para separar do SVG */
-            z-index: 2; /* para ficar acima do SVG */
-        }
-        .title-container .title-image {
-            max-width: 80%;
-            height: auto;
-        }
-        .level-unit-info {
-            margin-top: 5px;
-            font-size: 24px;
-            font-weight: bold;
-            color: #000;
-        }
-
-        /* O SVG das linhas ficará absoluto dentro de .map-container.
-           Seu top será definido por JavaScript com base na altura real de .title-container.
-           A largura e o bottom (0) fazem com que ele preencha todo o espaço restante abaixo. */
-        .lines-svg {
-            position: absolute;
-            left: 0;
-            width: 100%;
-            bottom: 0;
-            /* top será ajustado dinamicamente via JS */
-        }
-
-        /* Botão “Back” no canto superior esquerdo (fica acima de tudo) */
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            background-color: #000;
-            color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-family: Arial, sans-serif;
-            z-index: 3;
-        }
-
-        /* Caixa de login no canto superior direito */
-        .login-container {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-            padding: 8px 12px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            z-index: 3;
-        }
-        .login-link {
-            cursor: pointer;
-            text-decoration: none;
-            color: #333;
-            font-family: Arial, sans-serif;
-        }
+        .login-link { cursor: pointer; }
         .user-dropdown {
             display: none;
             flex-direction: column;
@@ -132,6 +43,19 @@
         .user-dropdown .dropdown-item:hover {
             background-color: #f0f0f0;
         }
+        .login-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+            padding: 8px 12px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            z-index: 9999;
+        }
         .user-icon {
             width: 30px;
             height: 30px;
@@ -143,36 +67,42 @@
             font-size: 14px;
             color: #333;
         }
-
-        /* Apenas para garantir que, ao girar a tela, haja um reload (você já tinha esse script) */
+        .title-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .level-unit-info {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            color: black;
+            margin-top: 5px;
+        }
     </style>
 </head>
-
 <body>
-    <!-- Botão “Back” -->
-    <a href="javascript:history.back()" class="back-button">Back</a>
-
     <!-- Caixa de Login -->
     <div id="loginContainer" class="login-container">
         <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-        <div id="userDropdown" class="user-dropdown">
-            <!-- Itens do dropdown aparecerão aqui via JavaScript, se houver -->
-        </div>
+        <!-- Dropdown de Usuário -->
+        <div id="userDropdown" class="user-dropdown"></div>
     </div>
+    <!-- Botão Back -->
+    <a href="javascript:history.back()" class="back-button">Back</a>
 
-    <!-- Container principal: título no topo e SVG para linhas abaixo -->
     <div class="map-container" id="mapContainer">
-        <!-- Título e informações de Level/Unit -->
+        <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
-            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image" />
-            <div id="levelUnitInfo" class="level-unit-info">Level0<br />Unit1</div>
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+            <!-- Nível e Unidade -->
+            <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG responsivo para desenhar as linhas e fases -->
-        <svg id="linesSvg" class="lines-svg" xmlns="http://www.w3.org/2000/svg"></svg>
+        <!-- SVG para as linhas -->
+        <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
-    <!-- Script para forçar recarregar ao mudar de orientação -->
+    <!-- Script para forçar reload ao mudar orientação -->
     <script>
         let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
         window.addEventListener('resize', () => {
@@ -183,36 +113,6 @@
         });
     </script>
 
-    <!-- 
-        Script que ajusta, após o carregamento da página (e sempre que redimensionar),
-        a <svg> para que seu topo (“top”) fique exatamente abaixo da altura real 
-        de .title-container. Assim ela nunca “passa por cima” do título, nem em portrait nem em landscape.
-    -->
-    <script>
-        function ajustarTopoSVG() {
-            const titleContainer = document.querySelector('.title-container');
-            const svgDasLinhas = document.getElementById('linesSvg');
-
-            if (!titleContainer || !svgDasLinhas) return;
-            // Pega a altura real do título (incluindo margens internas definidas em CSS)
-            const alturaTitulo = titleContainer.offsetHeight;
-
-            // Define o topo do SVG para ficar imediatamente abaixo desse título
-            svgDasLinhas.style.top = alturaTitulo + 'px';
-        }
-
-        // Quando a página carregar completamente, ajusta o SVG
-        window.addEventListener('load', () => {
-            ajustarTopoSVG();
-        });
-
-        // Se o usuário girar a tela ou mudar o tamanho da janela, recalcula o topo do SVG
-        window.addEventListener('resize', () => {
-            ajustarTopoSVG();
-        });
-    </script>
-
-    <!-- Script.js original: responsável por desenhar as linhas e fases dentro do <svg> -->
     <script src="script.js"></script>
 </body>
 </html>
