--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -78,6 +78,51 @@
             color: black;
             margin-top: 5px;
         }
+        /* Certifique-se de que o SVG cubra toda a área disponível, 
+           posicionado por trás dos elementos .phase */
+        #linesSvg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+        .phase {
+            position: absolute;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+        .phase-img {
+            width: 60px;
+            height: 60px;
+        }
+        .lock-icon {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            bottom: -10px;
+            right: -10px;
+        }
+        .player {
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+        }
+        .path-blue {
+            stroke: #3b82f6;
+            stroke-width: 4;
+            fill: none;
+        }
+        .unlock-gif {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            top: -25px;
+            left: -25px;
+        }
     </style>
 </head>
 <body>
@@ -87,10 +132,11 @@
         <!-- Dropdown de Usuário -->
         <div id="userDropdown" class="user-dropdown"></div>
     </div>
+
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
 
-    <div class="map-container" id="mapContainer">
+    <div class="map-container" id="mapContainer" style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
         <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
@@ -98,8 +144,8 @@
             <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG para as linhas -->
-        <svg id="linesSvg" class="lines-svg"></svg>
+        <!-- SVG para as linhas (deve ficar atrás dos elementos .phase) -->
+        <svg id="linesSvg"></svg>
     </div>
 
     <!-- Script para forçar reload ao mudar orientação -->
