--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -78,8 +78,7 @@
             color: black;
             margin-top: 5px;
         }
-        /* Certifique-se de que o SVG cubra toda a área disponível, 
-           posicionado por trás dos elementos .phase */
+        /* O SVG cobre toda a área de mapContainer e fica atrás dos .phase */
         #linesSvg {
             position: absolute;
             top: 0;
@@ -87,11 +86,13 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
+            z-index: 0;
         }
         .phase {
             position: absolute;
             transform: translate(-50%, -50%);
             text-align: center;
+            z-index: 1;
         }
         .phase-img {
             width: 60px;
@@ -109,7 +110,7 @@
             width: 40px;
             height: 40px;
             transform: translate(-50%, -50%);
-            z-index: 1000;
+            z-index: 2;
         }
         .path-blue {
             stroke: #3b82f6;
@@ -122,6 +123,17 @@
             height: 50px;
             top: -25px;
             left: -25px;
+        }
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            text-decoration: none;
+            background-color: #000;
+            color: #fff;
+            padding: 8px 12px;
+            border-radius: 4px;
+            z-index: 9999;
         }
     </style>
 </head>
@@ -136,7 +148,7 @@
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
 
-    <div class="map-container" id="mapContainer" style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
+    <div class="map-container" id="mapContainer" style="position: relative; width: 100%;">
         <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
@@ -144,8 +156,9 @@
             <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG para as linhas (deve ficar atrás dos elementos .phase) -->
+        <!-- SVG para as linhas (fica atrás dos elementos .phase) -->
         <svg id="linesSvg"></svg>
+        <!-- As fases serão inseridas via script.js -->
     </div>
 
     <!-- Script para forçar reload ao mudar orientação -->
@@ -159,6 +172,7 @@
         });
     </script>
 
+    <!-- Chama o JavaScript principal -->
     <script src="script.js"></script>
 </body>
 </html>
