--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -26,7 +26,7 @@
 
   <style>
     /* =======================
-       Estilos básicos (copiados e adaptados dos HTMLs originais)
+       Estilos básicos (adaptados dos originais)
        ======================= */
     body, html {
       margin: 0;
@@ -36,7 +36,7 @@
     }
     .login-link { cursor: pointer; }
     .user-dropdown {
-      display: none;
+      display: false;
       flex-direction: column;
       position: absolute;
       top: 50px;
@@ -95,7 +95,7 @@
       background-image: url('../../imagens/fundo.png');
       background-repeat: repeat;
       background-size: 200%;
-      /* não fixamos altura nem overflow: hidden, para permitir scroll */
+      /* NÃO fixamos altura nem overflow: hidden, para permitir scroll */
     }
     header {
       width: 100%;
@@ -201,8 +201,8 @@
     });
   </script>
 
-  <!-- Inclui configuração de fases + script unificado -->
-  <script src="fasesConfig.js"></script>
+  <!-- IMPORTANTE: carregue config.js antes de scriptMapa.js -->
+  <script src="config.js"></script>
   <script src="scriptMapa.js"></script>
 </body>
 </html>
