--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -209,33 +209,33 @@
           <img src="../../imagens/resources.png" alt="Teacher Resources">
         </a>
 
-        <!-- Botões de Atividades (data-activity define a chave usada em fasesConfig.js) -->
-        <a data-activity="listening"       class="activity-button">
+        <!-- Botões de Atividades (data-activity define a chave usada em config.js) -->
+        <a data-activity="listening"    class="activity-button">
           <img src="../../imagens/listening.png" alt="Listening">
         </a>
-        <a data-activity="grammar"         class="activity-button">
+        <a data-activity="grammar"      class="activity-button">
           <img src="../../imagens/grammar.png" alt="Grammar">
         </a>
-        <a data-activity="speaking"        class="activity-button">
+        <a data-activity="speaking"     class="activity-button">
           <img src="../../imagens/speaking.png" alt="Speaking">
         </a>
-        <a data-activity="writing"         class="activity-button">
+        <a data-activity="writing"      class="activity-button">
           <img src="../../imagens/writing.png" alt="Writing">
         </a>
-        <a data-activity="Bible"           class="activity-button">
+        <a data-activity="Bible"        class="activity-button">
           <img src="../../imagens/Bible.png" alt="Bible">
         </a>
-        <a data-activity="apresentacao"    class="activity-button">
+        <a data-activity="apresentacao" class="activity-button">
           <img src="../../imagens/apresentacao.png" alt="Apresentação">
         </a>
 
         <!-- Botão Test (ocupa duas colunas) -->
-        <a data-activity="test"            class="activity-button test-button">
+        <a data-activity="test"         class="activity-button test-button">
           <img src="../../imagens/test.png" alt="Test">
         </a>
 
         <!-- Botão do Robot Lex (chave fixa “LEX”) -->
-        <a data-activity="LEX"             class="activity-button robot-lex" id="robot-lex-link">
+        <a data-activity="LEX"          class="activity-button robot-lex" id="robot-lex-link">
           <img src="../../imagens/botoes/lex_button.png" alt="Robot Lex">
         </a>
       </div>
@@ -258,7 +258,7 @@
       }
     });
 
-    // 2) Lê Level e Unit atuais da URL (ex: "/level0/unit1/alguma_coisa")
+    // 2) Lê level e unit atuais da URL (ex: "/level0/unit1/index.html")
     function getLevelAndUnitFromPath() {
       const parts = window.location.pathname.split("/");
       // parts[1] = "level0", parts[2] = "unit1"
