--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -95,9 +95,23 @@
             z-index: 1;
         }
         .phase-img {
-            width: 100px;
-            height: 100px;
-        }
+    width: 80px;
+    height: 80px;
+}
+
+@media (orientation: portrait) {
+    .phase-img {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+@media (orientation: landscape) {
+    .phase-img {
+        width: 100px;
+        height: 100px;
+    }
+}
         .lock-icon {
             position: absolute;
             width: 20px;
