--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -112,6 +112,10 @@
         height: 100px;
     }
 }
+.phase.active img {
+    box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
+    border-radius: 10px;
+}
         .lock-icon {
             position: absolute;
             width: 20px;
