--- a/Level0/Unit1/listening.html
+++ b/Level0/Unit1/listening.html
@@ -94,7 +94,9 @@
             text-align: center;
             z-index: 1;
         }
-        .phase-img {
+ .phase-img {
+    border-radius: 50%;
+    object-fit: cover;
     width: 70px;
     height: 70px;
 }
@@ -112,9 +114,9 @@
         height: 100px;
     }
 }
+
 .phase.active img {
     box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
-    border-radius: 10px;
 }
         .lock-icon {
             position: absolute;
