--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -209,30 +209,25 @@
                     <img src="../../imagens/resources.png" alt="Teacher Resources">
                 </a>
 
-                <!-- Botões de Atividades -->
-                <a href="parte1.html" class="activity-button">
-                    <img src="../../imagens/listening.png" alt="Listening">
-                </a>
-                <a href="grammar.html" class="activity-button">
-                    <img src="../../imagens/grammar.png" alt="Grammar">
-                </a>
-                <a href="speaking.html" class="activity-button">
-                    <img src="../../imagens/speaking.png" alt="Speaking">
-                </a>
-                <a href="writing.html" class="activity-button">
-                    <img src="../../imagens/writing.png" alt="Writing">
-                </a>
-                <a href="Bible.html" class="activity-button">
-                    <img src="../../imagens/Bible.png" alt="Bible">
-                </a>
-                <a href="apresentacao.html" class="activity-button">
-                    <img src="../../imagens/apresentacao.png" alt="Apresentação">
-                </a>
-                
-                <!-- Botão Test atualizado para ocupar duas colunas e ter a mesma responsividade -->
-                <a href="test.html" class="activity-button test-button">
-                    <img src="../../imagens/test.png" alt="Test">
-                </a>
+               <!-- Botões de Atividades -->
+<a href="fases.html?trecho=trecho1" class="activity-button">
+    <img src="../../imagens/listening.png" alt="Listening">
+</a>
+<a href="fases.html?trecho=trecho2" class="activity-button">
+    <img src="../../imagens/grammar.png" alt="Grammar">
+</a>
+<a href="fases.html?trecho=trecho3" class="activity-button">
+    <img src="../../imagens/speaking.png" alt="Speaking">
+</a>
+<a href="fases.html?trecho=trecho4" class="activity-button">
+    <img src="../../imagens/writing.png" alt="Writing">
+</a>
+<a href="fases.html?trecho=trecho5" class="activity-button">
+    <img src="../../imagens/Bible.png" alt="Bible">
+</a>
+<a href="fases.html?trecho=trecho6" class="activity-button">
+    <img src="../../imagens/apresentacao.png" alt="Apresentação">
+</a>
 
                 <!-- Botão do Robot Lex -->
                 <!-- O href será injetado via JavaScript -->
