--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -192,7 +192,7 @@
         });
     </script>
 
-    <!-- Chama o JavaScript principal -->
+    <script src="atividadesPorTrecho.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
