--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -137,13 +137,16 @@
             stroke-width: 4;
             fill: none;
         }
-        .unlock-gif {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            top: -25px;
-            left: -25px;
-        }
+       .unlock-gif {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    pointer-events: none;
+}        
         .back-button {
             position: absolute;
             top: 20px;
