--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -139,14 +139,15 @@
         }
        .unlock-gif {
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: 140px;
+    height: 140px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 20;
     pointer-events: none;
-}        
+    animation: pop-in 0.3s ease-out;
+}
         .back-button {
             position: absolute;
             top: 20px;
@@ -158,6 +159,16 @@
             border-radius: 4px;
             z-index: 9999;
         }
+@keyframes pop-in {
+    from {
+        transform: scale(0.6) translate(-50%, -50%);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1) translate(-50%, -50%);
+        opacity: 1;
+    }
+}
     </style>
 </head>
 <body>
