--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -115,7 +115,7 @@
     }
 }
 
-.phase.active img {
+.phase.active img.phase-img {
     box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
 }
         .lock-icon {
