--- a/Level0/Unit1/fases.html
+++ b/Level0/Unit1/fases.html
@@ -126,12 +126,13 @@
             right: -10px;
         }
         .player {
-            position: absolute;
-            width: 40px;
-            height: 40px;
-            transform: translate(-50%, -50%);
-            z-index: 2;
-        }
+    position: absolute;
+    width: 90px;        /* tamanho bem maior */
+    height: 90px;
+    transform: translate(-50%, -10%);  /* reposiciona para tangenciar a fase */
+    z-index: 3;
+    pointer-events: none;
+}
         .path-blue {
             stroke: #3b82f6;
             stroke-width: 4;
