--- a/Level0/Unit2/fases.html
+++ b/Level0/Unit2/fases.html
@@ -115,7 +115,7 @@
     }
 }
 
-.phase.active img {
+.phase.active img.phase-img {
     box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
 }
         .lock-icon {
@@ -126,24 +126,29 @@
             right: -10px;
         }
         .player {
-            position: absolute;
-            width: 40px;
-            height: 40px;
-            transform: translate(-50%, -50%);
-            z-index: 2;
-        }
+    position: absolute;
+    width: 90px;        /* tamanho bem maior */
+    height: 90px;
+    transform: translate(-50%, -10%);  /* reposiciona para tangenciar a fase */
+    z-index: 3;
+    pointer-events: none;
+}
         .path-blue {
             stroke: #3b82f6;
             stroke-width: 4;
             fill: none;
         }
-        .unlock-gif {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            top: -25px;
-            left: -25px;
-        }
+       .unlock-gif {
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    pointer-events: none;
+    animation: pop-in 0.3s ease-out;
+}
         .back-button {
             position: absolute;
             top: 20px;
@@ -155,6 +160,16 @@
             border-radius: 4px;
             z-index: 9999;
         }
+@keyframes pop-in {
+    from {
+        transform: scale(0.6) translate(-50%, -50%);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1) translate(-50%, -50%);
+        opacity: 1;
+    }
+}
     </style>
 </head>
 <body>
