--- a/Level1/Unit2/fases.html
+++ b/Level1/Unit2/fases.html
@@ -78,6 +78,98 @@
             color: black;
             margin-top: 5px;
         }
+        /* O SVG cobre toda a área de mapContainer e fica atrás dos .phase */
+        #linesSvg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+        }
+        .phase {
+            position: absolute;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            z-index: 1;
+        }
+ .phase-img {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 60px;
+    height: 60px;
+}
+
+@media (orientation: portrait) {
+    .phase-img {
+        width: 70px;
+        height: 70px;
+    }
+}
+
+@media (orientation: landscape) {
+    .phase-img {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+.phase.active img.phase-img {
+    box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
+}
+        .lock-icon {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            bottom: -10px;
+            right: -10px;
+        }
+        .player {
+    position: absolute;
+    width: 90px;        /* tamanho bem maior */
+    height: 90px;
+    transform: translate(-50%, -10%);  /* reposiciona para tangenciar a fase */
+    z-index: 3;
+    pointer-events: none;
+}
+        .path-blue {
+            stroke: #3b82f6;
+            stroke-width: 4;
+            fill: none;
+        }
+       .unlock-gif {
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    pointer-events: none;
+    animation: pop-in 0.3s ease-out;
+}
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            text-decoration: none;
+            background-color: #000;
+            color: #fff;
+            padding: 8px 12px;
+            border-radius: 4px;
+            z-index: 9999;
+        }
+@keyframes pop-in {
+    from {
+        transform: scale(0.6) translate(-50%, -50%);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1) translate(-50%, -50%);
+        opacity: 1;
+    }
+}
     </style>
 </head>
 <body>
@@ -87,10 +179,11 @@
         <!-- Dropdown de Usuário -->
         <div id="userDropdown" class="user-dropdown"></div>
     </div>
+
     <!-- Botão Back -->
     <a href="javascript:history.back()" class="back-button">Back</a>
 
-    <div class="map-container" id="mapContainer">
+    <div class="map-container" id="mapContainer" style="position: relative; width: 100%;">
         <!-- Imagem de título centralizada sobre o fundo -->
         <div class="title-container">
             <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
@@ -98,10 +191,23 @@
             <div id="levelUnitInfo" class="level-unit-info"></div>
         </div>
 
-        <!-- SVG para as linhas -->
-        <svg id="linesSvg" class="lines-svg"></svg>
+        <!-- SVG para as linhas (fica atrás dos elementos .phase) -->
+        <svg id="linesSvg"></svg>
+        <!-- As fases serão inseridas via script.js -->
     </div>
 
+    <!-- Script para forçar reload ao mudar orientação -->
+    <script>
+        let prevOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
+        window.addEventListener('resize', () => {
+            const currentOrientation = window.innerWidth > window.innerHeight ? 'landscape' : 'portrait';
+            if (currentOrientation !== prevOrientation) {
+                location.reload();
+            }
+        });
+    </script>
+
+    <script src="atividadesPorTrecho.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
