--- a/Level1/Unit2/index.html
+++ b/Level1/Unit2/index.html
@@ -225,20 +225,39 @@
       ];
 
       const container = document.getElementById("activity-buttons");
+buttonData.forEach(data => {
+  const a = document.createElement("a");
+  a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
+  a.className = "activity-button";
 
-      buttonData.forEach(data => {
-        const a = document.createElement("a");
-        a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
-        a.className = "activity-button";
+  const img = document.createElement("img");
+  img.src = data.img;
+  img.alt = data.alt;
 
-        const img = document.createElement("img");
-        img.src = data.img;
-        img.alt = data.alt;
+  a.appendChild(img);
+  container.appendChild(a);
+});
 
-        a.appendChild(img);
-        container.appendChild(a);
-      });
-    });
+// Botão do TEST
+const testButton = document.createElement("a");
+testButton.href = `/${level}/${unit}/test.html`;
+testButton.className = "activity-button test-button";
+const testImg = document.createElement("img");
+testImg.src = "../../imagens/test.png";
+testImg.alt = "Test";
+testButton.appendChild(testImg);
+container.appendChild(testButton);
+
+// Botão do ROBÔ LEX
+const robotButton = document.createElement("a");
+robotButton.href = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
+robotButton.className = "activity-button robot-lex";
+robotButton.id = "robot-lex-link";
+const robotImg = document.createElement("img");
+robotImg.src = "../../imagens/botoes/lex_button.png";
+robotImg.alt = "Robot Lex";
+robotButton.appendChild(robotImg);
+container.appendChild(robotButton);
   </script>
 
   <script>
